--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,4 +13,9 @@ jobs:
        uses: actions/checkout@v4
      - name: list after checkout-code 
        run: ls -a
-       
+     - name: setup node
+       uses: actions/setup-node@v4
+       with:
+         node-version: '20.x'
+     - name:  install dependencies
+       run: npm ci      
